# BearAndHuntersGame

./: .gitignore  LICENSE  README.md
GUI/: bear_gui_evolution.py
OO/: bearOO2players.py
OO-AI/: bear.py
OO-AI/easyAI/: Player.py
OO-AI/easyAI/games/: Chopsticks.py
Procedural/: bear2players.py
PyGame/: bear.policy  hunter.policy  orso.py  orso_lez1.py  pyproject.toml
