[tool.poetry]
name = "GiocoDellOrso"
version = "1.1"
description = """
Gioco dell'orso
Bear (and Hunter)'s Game is an ancient board game played in Cervo Valley, in the Italian Alps
More informations about its discovery here: https://vallecervobiella.wordpress.com/il-gioco-dellorso/ (in Italian)
"""
authors = ["Python Biella Group <pythonbiellagroup@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
